# go2_intelligence_framework

./: .CLAUDE.md  .gitignore  .mcp_guide.md  CLAUDE.md  Readme.md  requirements.txt
config/: go2_nav2_params.yaml  go2_nav2_params_real.yaml  go2_sim.rviz
docs/: 01_rtabmap_slam_plan.md  02_nav2_plan.md  03_nav2_plan.md  03_policy_decision.md  05_visual_odom_migration.md  06_rviz_robot_model_plan.md  07_gui_controller_plan.md  08_semantic_navigation_direction.md  09_multifloor_stair_navigation_direction.md  10_project_dependencies.md
launch/: go2_navigation.launch.py  go2_rtabmap.launch.py
scripts/: go2_sim.py  my_slam_env.py  run_gui_controller.sh
src/go2_gui_controller/: package.xml  setup.py
src/go2_gui_controller/config/: waypoints.yaml
src/go2_gui_controller/go2_gui_controller/: __init__.py  charts_panel.py  commands.py  gui_app.py  main.py  manual_control.py  navigator_bridge.py  state_bridge.py  telemetry_bridge.py  text_command_parser.py  voice_command_listener.py  waypoint_registry.py
src/go2_gui_controller/launch/: go2_gui_controller.launch.py
src/go2_project_dependencies/: CMakeLists.txt  package.xml
