<?xml version="1.0"?>
<package format="3">
  <name>go2_gui_controller</name>
  <version>0.1.0</version>
  <description>GUI controller for Go2 navigation with Nav2 and manual control.</description>
  <maintainer email="cvr@local">cvr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>portaudio19-dev</depend>
  <depend>python3-numpy</depend>
  <depend>python_qt_binding</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
