<?xml version="1.0"?>
<package format="3">
  <name>go2_project_dependencies</name>
  <version>0.1.0</version>
  <description>Dependency bundle for Go2 Intelligence Framework ROS packages.</description>
  <maintainer email="cvr@local">cvr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
